syntax = "proto3";

package store_category.v1;

import "store-item.proto";

// StoreCategoryService defines the gRPC service for managing store categories.
service StoreCategoryService {
  // rpc to get store categories by language
  rpc GetStoreCategoriesByLanguage(Language) returns (StoreCategoryList) {}
  // rpc to get a store category by its ID
  rpc GetStoreCategoryById(Id) returns (StoreCategoryWithTranslations) {}
  // rpc to create a new store category
  rpc CreateStoreCategory(CreateStoreCategoryRequest) returns (Id) {}
  // rpc to update an existing store category
  rpc UpdateStoreCategory(UpdateStoreCategoryRequest) returns (Id) {}
  // rpc to delete a store category by its ID
  rpc DeleteStoreCategory(Id) returns (StatusResponse) {}
  // rpc to change the position of a store category
  rpc ChangeStoreCategoryPosition(ChangeStoreCategoryPositionRequest) returns (StoreCategory) {}
  // rpc to create or update a store category translation
  rpc UpsertStoreCategoryTranslation(StoreCategoryTranslationRequest) returns (Id) {}
  // rpc to delete a store category translation by its ID
  rpc DeleteStoreCategoryTranslation(Id) returns (StatusResponse) {}
}

// declaration of Language message
message Language {
  store_item.v1.Language language = 1;
}

// declaration of Id message
message Id {
  string id = 1;
}

// Message representing a status response
message StatusResponse {
  bool success = 1;
  string message = 2;
}

// Message representing a list of store categories
message StoreCategoryList {
  repeated StoreCategoryWithTranslation data = 1;
}

// Message representing a store category
message StoreCategory {
  string id = 1;
  string slug = 2;
  bool is_available = 3;
  int32 sort_order = 4;
}

// Message representing a store category with translation
message StoreCategoryWithTranslation {
  string id = 1;
  string slug = 2;
  bool is_available = 3;
  int32 sort_order = 4;
  string title = 5;
  string description = 6;
}

// Message representing a store category translation
message StoreCategoryTranslation {
  string id = 1;
  string title = 2;
  string description = 3;
  store_item.v1.Language language = 4;
}

// Message representing a store category with its translation
message StoreCategoryWithTranslations {
  StoreCategory category = 1;
  repeated StoreCategoryTranslation translation = 2;
}

// Message for creating a new store category
message CreateStoreCategoryRequest {
  string slug = 1;
  optional bool is_available = 2;
  optional int32 sort_order = 3;
}

// Message for updating an existing store category
message UpdateStoreCategoryRequest {
  string id = 1;
  optional string slug = 2;
  optional bool is_available = 3;
}

// Message for changing the position of a store category
message ChangeStoreCategoryPositionRequest {
  string id = 1;
  int32 sort_order = 2;
}

// Message for creating or updating a store category translation
message StoreCategoryTranslationRequest {
  string category_id = 1;
  string title = 2;
  optional string description = 3;
  store_item.v1.Language language = 4;
}

// Command to generate TypeScript code with NestJS options, using null for optional fields and Date for timestamps
// protoc -I ./proto ./proto/store-category.proto --ts_proto_out=./src/generated-types --ts_proto_opt=nestJs=true --ts_proto_opt=useNullAsOptional=true --ts_proto_opt=useDate=true
